--- a/css/style.css
+++ b/css/style.css
@@ -44,24 +44,27 @@ body {
     width: 100%;
     text-align: center;
     padding-top: .5rem;
-    opacity: .6; }
+    opacity: 1; }
     .inicio ul li a {
       text-decoration: none;
       color: #7e482c;
       width: 100%;
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       font-weight: 700; }
       .inicio ul li a:hover {
         opacity: 1;
-        font-weight: 500;
+        font-weight: 700;
         color: #9aa088; }
 
 .navbar {
   background-color: #d6d1a7; }
   .navbar img {
-    width: 25rem;
+    width: 21rem;
     margin: auto 0;
     padding: 2rem 1rem; }
+    @media (min-width: 320px) {
+      .navbar img {
+        width: 25rem; } }
   .navbar ul {
     padding-right: 1rem; }
     .navbar ul li {
@@ -150,7 +153,11 @@ body {
   color: #ffe69b; }
 
 .cajaGaleria {
+  display: none;
   background-color: #dbc998; }
+  @media (min-width: 768px) {
+    .cajaGaleria {
+      display: block; } }
   .cajaGaleria h3 {
     color: #485956;
     font-size: 2.5rem;
