--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -29,17 +29,18 @@
         width: 100%;
         text-align:  center;
         padding-top: .5rem;
-        opacity: .6;
+        opacity:1;
 
         a{
             text-decoration: none;
             color: map-get($map:$paleta,$key:'colorAInicio');
             width: 100%;
-            @include title($textLg, 700);
+            @include title($textXL, 700);
+            
 
             &:hover{
                 opacity: 1;
-                font-weight: 500;
+                font-weight: 700;
                 color: map-get($map:$paleta,$key:'colorAhoverInicio');
             }
         }
