--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -22,6 +22,7 @@ $paleta:(
 	'colorBgUbicacion':rgba(219,201,152,1),
 	'colorBgFooter':rgba(143,152,178,1),
 	'borderColorImg':rgba(255,230,155,1),
+	'colorh1Error404':#485956,
 	);
 
 
