--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -10,6 +10,19 @@
     flex-direction: column;
     height: 100vh;
 
+    h1{
+        @include title($textXXL, 700);
+        text-align: center;
+        font-family: $fontH2Inicio;
+        color: map-get($map:$paleta,$key:'colorTituloInicio');
+        width: 80%;
+        height: auto;
+        margin:0 auto;
+        animation-name:textAparicion;
+        animation-duration:2s;
+        animation-timing-function: ease;
+    }
+
     h2{
         @include title($textXXL, 700);
         text-align: center;
